[project]
authors = [{name = "sosucat", email = "pengu1n.i843@gmail.com"}]
dependencies = []
name = "virtual-livechat"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
virtual_livechat = { path = ".", editable = true }

[tool.pixi.tasks]
